plugins/devkit/devkit-kotlin-tests/testData/inspections/inspectionDescription/MyInspection.kt
class <error descr="Inspection does not have a description">MyInspection</error> : com.intellij.codeInspection.InspectionProfileEntry() {
  
}
